# docs/swagger.json
@@ -761,9 +761,13 @@
         "mapper.User": {
             "type": "object",
             "properties": {
+                "birthday": {
+                    "type": "string",
+                    "example": "01.01.1999"
+                },
                 "created_at": {
                     "type": "string",
-                    "example": "2023-09-19T10:58:00.000Z"
+                    "example": "01.01.1999"
                 },
                 "email": {
                     "type": "string",
@@ -789,9 +793,13 @@
                     "type": "string",
                     "example": "Ivanych"
                 },
+                "phone": {
+                    "type": "string",
+                    "example": "+7(495)999-99-99"
+                },
                 "updated_at": {
                     "type": "string",
-                    "example": "2023-09-19T10:58:00.000Z"
+                    "example": "01.01.1999"
                 },
                 "username": {
                     "type": "string",
@@ -802,6 +810,10 @@
         "user.UserCreateRequest": {
             "type": "object",
             "properties": {
+                "birthday": {
+                    "type": "string",
+                    "example": "01.01.1999"
+                },
                 "email": {
                     "type": "string",
                     "example": "Ivanych@gmail.com"
@@ -822,6 +834,10 @@
                     "type": "string",
                     "example": "Ivanych"
                 },
+                "phone": {
+                    "type": "string",
+                    "example": "+7(495)999-99-99"
+                },
                 "username": {
                     "type": "string",
                     "example": "Ivanec"
@@ -835,17 +851,9 @@
                     "type": "string",
                     "example": "Ivanych@gmail.com"
                 },
-                "lastName": {
+                "phone": {
                     "type": "string",
-                    "example": "Ivanov"
-                },
-                "name": {
-                    "type": "string",
-                    "example": "Ivan"
-                },
-                "patronymic": {
-                    "type": "string",
-                    "example": "Ivanych"
+                    "example": "+7(495)999-99-99"
                 }
             }
         }
